force-app/main/default/objects/public_remotecompute__x/public_remotecompute__x.object-meta.xml
<CustomObject>
    <description>public$remotecompute</description>
    <externalDataSource>Remote_Compute_Results</externalDataSource>
    <externalName>public$remotecompute</externalName>
    <label>Remote Compute Job</label>
    <pluralLabel>Remote Compute Jobs</pluralLabel>
</CustomObject>