force-app/main/default/objects/public_remotecompute__x/fields/computeattributes_c__c.field-meta.xml
<CustomField>
    <fullName>computeattributes_c__c</fullName>
    <description>computeattributes__c</description>
    <externalDeveloperName>computeattributes__c</externalDeveloperName>
-
    <label>computeattributes__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>