force-app/main/default/objects/public_remotecompute__x/fields/computeservice_c__c.field-meta.xml
<CustomField>
    <fullName>computeservice_c__c</fullName>
    <description>computeservice__c</description>
    <externalDeveloperName>computeservice__c</externalDeveloperName>
    <label>computeservice__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>