force-app/main/default/objects/public_remotecompute__x/fields/contextrecordid_c__c.field-meta.xml
<CustomField>
    <fullName>contextrecordid_c__c</fullName>
    <description>contextrecordid__c</description>
    <externalDeveloperName>contextrecordid__c</externalDeveloperName>
    <label>contextrecordid__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>