force-app/main/default/objects/public_remotecompute__x/fields/createdbyid__c.field-meta.xml
<CustomField>
    <fullName>createdbyid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>createdbyid</description>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>createdbyid</label>
    <referenceTo>User</referenceTo>
    <relationshipName>public_remotecompute</relationshipName>
    <type>Lookup</type>
</CustomField>