force-app/main/default/objects/public_remotecompute__x/fields/creationdate__c.field-meta.xml
<CustomField>
    <fullName>creationdate__c</fullName>
    <description>creationdate</description>
    <externalDeveloperName>creationdate</externalDeveloperName>
    <label>creationdate</label>
    <type>DateTime</type>
</CustomField>