force-app/main/default/objects/public_remotecompute__x/fields/jobid__c.field-meta.xml
<CustomField>
    <fullName>jobid__c</fullName>
    <description>jobid</description>
    <externalDeveloperName>jobid</externalDeveloperName>
    <label>jobid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>