force-app/main/default/objects/public_remotecompute__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>creationdate__c</columns>
    <columns>ExternalId</columns>
    <columns>createdbyid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>